--- a/oppgaver/oppgave-4/deployment-6.yml
+++ b/oppgaver/oppgave-4/deployment-6.yml
@@ -22,14 +22,14 @@ spec:
     spec:
       containers:
       - name: demo-pod
-        image: scav/colour-service:latest
+        image: scav/colour-service:any
         ports:
         - containerPort: 8080
         readinessProbe:
           httpGet:
             path: /health
             port: 8080 # I prod bør dette være annen port en hoved-port
-          initialDelaySeconds: 2 # Venter før den begynner å sjekke om app'en er klar
+          initialDelaySeconds: 20 # Venter før den begynner å sjekke om app'en er klar
           periodSeconds: 1 # Hvor ofte den sjekker
           failureThreshold: 5 # Hvor mange feil som skal til før den konkluderer..
         livenessProbe:
@@ -41,12 +41,14 @@ spec:
 
 
         env:
+        - name: BG_COLOR
+          value: "#ffeeff"
         - name: LOG_LEVEL
           value: "info"
         - name: LOG_HEALTH_ENDPOINT
           value: "true"
         - name: REMOTE_SERVICE
-          value: "colour-service.default"
+          value: "demo-service.default:7070"
         - name: NODE_NAME
           valueFrom:
             fieldRef:
@@ -94,7 +96,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: "/"
+          - path: "/xxxx"
             pathType: Prefix
             backend:
               service:
